hello world-html

--- a/星海工作室/index.html
+++ b/星海工作室/index.html
@@ -97,12 +97,12 @@
         <h2>访问我们的网站</h2>
         
         <!-- 按钮 -->
-        <button class="btn" onclick="window.location='http://localhost/MC/'"> 
+        <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/MC/'"> 
             <h2>[ Hi, Minecrafter! ]</h2>
         </button>
 
          <!-- 按钮 -->
-         <button class="btn" onclick="window.location='http://localhost/xinghai+/about/'"> 
+         <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/xinghai+/about/'"> 
             <h2>[ XINGHAI+ ]</h2>
         </button>
 
