--- a/MC/mod/mods.html
+++ b/MC/mod/mods.html
@@ -143,7 +143,7 @@
         </ul>
  
         <!-- 返回主页按钮 -->
-        <button class="btn" onclick="window.location='http://localhost/MC/'"> 
+        <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/MC/'"> 
             [ 主页 ]
         </button>
     </div>
