--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <h1>
-        欢迎
-    </h1>
-</html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Zhang Sheng Hong's Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            padding: 50px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to Zhang Sheng Hong's Website</h1>
+        <p>We are glad to have you here. Explore our content and enjoy your stay!</p>
+    </div>
+</body>
+</html></div></html>
