--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Zhang Sheng Hong's Website</title>
+    <title>欢迎来到张圣鸿的网站</title>
     <style>
         body {
             font-family: Arial, sans-serif;
