--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Zhang Sheng Hong's Website</h1>
-        <p>We are glad to have you here. Explore our content and enjoy your stay!</p>
+        <h1>欢迎来到张圣鸿的网站</h1>
+        <p>我们很高兴您来到这里！</p>
     </div>
 </body>
 </html></div></html>
