--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container">
         <h1>欢迎来到张圣鸿的网站</h1>
-        <p>我们很高兴您来到这里！</p>
+        <p>我很高兴您来到这里！</p>
     </div>
 </body>
 </html></div></html>
