--- a/404.html
+++ b/404.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
+<head>
     <meta charset="UTF-8">
-    <h1>
-        404 - 该网页不存在
-    </h1>
+    <title>404 - 页面未找到</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            font-size: 50px;
+        }
+        p {
+            font-size: 20px;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>404 - 页面未找到</h1>
+    <p>抱歉，您要查找的页面不存在。</p>
+    <p><a href="/">返回首页</a></p>
+</body>
 </html>
