--- a/H.W.html
+++ b/H.W.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
     <meta charset="UTF-8">
         Hello,World!
         <button id="myButton">点击我</button>
