--- a/星海工作室/index.html
+++ b/星海工作室/index.html
@@ -102,7 +102,7 @@
         </button>
 
          <!-- 按钮 -->
-         <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/xinghai+/about/'"> 
+         <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/xinghai+/'"> 
             <h2>[ XINGHAI+ ]</h2>
         </button>
 
