--- a/cs.html
+++ b/cs.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <imp src="E://星海工作室//Dell.png"></imp>
+    <imp src="E:/星海工作室/Dell.png"></imp>
 </body>
 </html>
