--- a/sou.html
+++ b/sou.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>搜索引擎</h1>
+        <h1>星海搜索</h1>
         <form action="https://cn.bing.com/search" method="get">
             <input type="text" name="q" placeholder="搜索..." id="search-input">
             <input type="hidden" name="setlang" value="zh-Hans">
