--- a/仪表盘模拟器/index.html
+++ b/仪表盘模拟器/index.html
@@ -70,7 +70,10 @@
             </div>
         </div>
     </main>
-    <script src="assets/scripts/physics.js"></script>
-    <script src="assets/scripts/scripts.js"></script>
+    <script src="assets/scripts/core/core-calculation.js"></script>
+    <script src="assets/scripts/core/core-render.js"></script>
+    <script src="assets/scripts/core/rules.js"></script>
+    <script src="assets/scripts/physics/physics.js"></script>
+    <script src="assets/scripts/main/scripts.js"></script>
 </body>
 </html>
