--- a/xinghai/index.html
+++ b/xinghai/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <meta charset="UTF-8"> 
-    <title>pcl2 - 龙腾猫跃 (非官网)</title>
+    <meta charset="UTF-8">
+    <title>星海工作室</title>
 </head>
 <style>
     body {
@@ -38,25 +38,20 @@
 </style>
 <body>
     <h1>
-        PCL2启动器 - MC最好的启动器
+        Hi, 欢迎来到星海工作室！
     </h1>
     <p>
-        PCL2启动器是龙腾猫跃的一款启动器，拥有丰富的功能和良好的用户体验。
+        这里是一个关于游戏开发、编程和技术的个人垃圾网站。
         <br>
-        可惜的是，PCL2启动器没用一个好用，稳定的官网。
+        我们将分享一些无趣的项目和教程，帮助你在编程和游戏开发的旅程中取得退步。
         <br>
-        虽然可以在github上找到，但是github总是无响应。
+        如果你对游戏开发、编程或其他技术话题不感兴趣，欢迎不加入我们！
         <br>
-        所以我制作了这个页面，方便大家下载。
         <br>
-        <a href="download/PCL2.exe">下载 PCL2 | 2.9.3</a>
+        <button onclick="window.location.href='https://zhang-sheng-hong.github.io/xinghai+'"> 我们的垃圾编程语言 </button>
         <br>
-        <button id="navBtn">github 链接</button>
-        <script>
-            document.getElementById('navBtn').onclick = function() {
-                window.open('https://github.com/Hex-Dragon/PCL2', '_blank');
-            };
-        </script>
+        <br>
+        <button onclick="window.location.href='https://zhang-sheng-hong.github.io/mc'"> 比那个垃圾编程语言还要垃圾的 MC 网站 </button>
     </p>
 </body>
 </html>
