--- a/MC/index.html
+++ b/MC/index.html
@@ -143,11 +143,11 @@
  
         <!-- 按钮区域 -->
         <div style="margin-top: 20px;">
-            <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/MC/mod/mods.html';"> 
+            <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/mc/mod/mods.html';"> 
                 [ MOD 推荐 ]
             </button>
             
-            <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/星海工作室';">
+            <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/xinghai/';">
                 [ 关于 ]
             </button>
         </div>
