--- a/MC/index.html
+++ b/MC/index.html
@@ -34,7 +34,7 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             display: none;
-            font-family: "Minecrafter Alt", sans-serif;
+            font-family: "Minecrafter", sans-serif;
         }
  
         #loader h1 {
@@ -52,7 +52,7 @@
  
         /* 标题样式 */
         h1 {
-            font-family: "Minecrafter Alt", sans-serif;
+            font-family: "Minecrafter", sans-serif;
             color: #333;
             font-size: 48px;
             margin-bottom: 30px;
