sbject: Update index.html

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -143,7 +143,7 @@
  
         <!-- 按钮区域 -->
         <div style="margin-top: 20px;">
-            <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/mc/mod/mods.html';"> 
+            <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/minecraft/mod/mods.html';"> 
                 [ MOD 推荐 ]
             </button>
             
