--- a/minecraft/mod/index.html
+++ b/minecraft/mod/index.html
@@ -143,7 +143,7 @@
         </ul>
  
         <!-- 返回主页按钮 -->
-        <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/MC/'"> 
+        <button class="btn" onclick="window.location='https://zhang-sheng-hong.github.io/minecraft/'"> 
             [ 主页 ]
         </button>
     </div>
