--- a/minecraft/versions/index.html
+++ b/minecraft/versions/index.html
@@ -12,6 +12,8 @@
         <code>https://zhang-sheng-hong.github.io/minecraft/versions/1.21.5/1.21.5.jar</code><br>
         还有<br>
         <code>https://zhang-sheng-hong.github.io/minecraft/versions/1.21.5/1.21.5.json</code>
+        <br>
+        *1.17之前的版本暂无
     </p>
 </body>
 </html>
