--- a/clock.html
+++ b/clock.html
@@ -6,7 +6,7 @@
     <title>clock</title>
     <style>
         body {
-            font-family: '思源黑体 Heavy', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Maple Mono NF CN', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: radial-gradient(circle, #001f3f, #000);
             color: #0f0;
             display: flex;
